--- a/src/components/home/ChooseUs.css
+++ b/src/components/home/ChooseUs.css
@@ -1,7 +1,7 @@
 /* WHY CHOOSE US SECTION  */
 .why-section {
   background: #fff;
-  padding: 40px 0 60px; 
+  padding: 60px 60px; 
   margin-top: -60px; 
 
 }
@@ -109,6 +109,11 @@
   
   }
 
+   .why-icon {
+    width: 35px;
+    height: 45px;
+  }
+
   .why-title {
     font-size: 20px;
     margin-bottom: 12px;
@@ -121,7 +126,9 @@
   }
 
   .why-section {
-    padding: 30px 15px;
+    padding: 0 15px;
+    padding-top: 40px !important;
+    padding-bottom: 30px !important;
   }
 }
 
@@ -168,4 +175,16 @@
 
   
   .why-item:not(:last-child)::after { display: none; }
+}
+
+.why-icon {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
