--- a/src/components/home/StatsSection.css
+++ b/src/components/home/StatsSection.css
@@ -1,16 +1,15 @@
 /* STATS SECTION  */
 .stats-section {
   background-color: #EEF3F8;
-  padding: 0;
-  padding-top:-40px;
-  margin-bottom: 50px;
-
+  margin: 30px 0;
+  
 }
 
 .stats-box {
   /* background-color: #EEF3F8; */
   border-radius: 8px;
-  padding: 0px 0px;
+  padding: 50px 0px;
+  padding-bottom: 30px;
 }
 
 /* LEFT TEXT BLOCK */
@@ -50,7 +49,7 @@
 .stats-grid {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 10px;
 }
 
 /* Row (2 on top, 1 below) */
@@ -76,16 +75,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  
 }
-
-.stat-header i {
-  font-size: 36px;
-  color: #000;
-}
+ 
 
 .stat-header h3 {
-  font-size: 24px;
+  font-size: 32px;
   font-weight: 700;
   color: #000;
   margin: 0;
@@ -110,7 +105,7 @@
 /*  RESPONSIVE DESIGN  */
 
 /* Large screens (between 1200px–1400px) */
-@media (max-width: 1400px) {
+@media (max-width: 1200px) {
   .stats-box {
     padding: 40px 60px;
   }
@@ -180,8 +175,8 @@
 /* Small devices (phones, ≤576px) */
 @media (max-width: 576px) {
   .stats-section {
-    padding: 30px 0;
-    margin-top: -25px;
+    padding: 10px 0;
+    margin-top: 20px;
   }
 
   .stats-box {
@@ -295,3 +290,16 @@
   }
 }
 
+.stats-icon {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+  margin-right: 10px;
+}
+
+@media (max-width: 576px) {
+  .stats-icon {
+    width: 32px;
+    height: 32px;
+  }
+}
