--- a/src/components/home/Testimonials.css
+++ b/src/components/home/Testimonials.css
@@ -1,14 +1,13 @@
 .testimonials-section {
   background: #fff;
-  padding: 50px 0;
+  padding: 90px 0 !important;
   display: flex;
   justify-content: center;
-   /* margin-top: -90px;
-   margin-bottom:-40px; */
+  
 }
 
 .testimonials-left .testimonials-title {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 } 
 
 testimonials-left .testimonials-quote {
@@ -34,16 +33,16 @@ testimonials-left .testimonials-quote {
 
 .testimonials-title {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 400;
   color: #004080;
-  margin-bottom: 25px;
+  margin-bottom: 10px !important;
 }
 
 .testimonials-quote {
   font-size: 1rem;
   line-height: 1.7;
   color: #000;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 /* RIGHT COLUMN (Carousel) */
@@ -60,14 +59,16 @@ testimonials-left .testimonials-quote {
 
 .testimonial-card {
   background: #f3f3f3;
-  border-radius: 12px;
-  padding: 40px 30px;
+  border-radius: 6px !important;
+  padding: 25px 20px !important;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   transition: transform 0.3s ease;
+  padding-bottom: 8px !important;
+  margin-top: 18px;
 }
 
 .testimonial-card:hover {
@@ -130,6 +131,15 @@ testimonials-left .testimonials-quote {
 }
 
 @media (max-width: 576px) {
+
+     .testimonials-section {
+    margin-top: 40px;   /* push DOWN */
+  }
+
+  .testimonials-wrapper {
+    gap: 15px;
+    margin-top: 0;      /* remove upward pull */
+  }
 
   .testimonials-wrapper {
   gap: 15px;
