--- a/src/components/common/Navbar.css
+++ b/src/components/common/Navbar.css
@@ -1,18 +1,24 @@
 
+.header-wrapper {
+  position: sticky;
+  top: 0;
+  z-index: 5000;
+  background: #fff;
+}
+
 .sticky-header {
   position: sticky;
   top: 0;
-  z-index: 3000;
-  transition: transform 0.4s ease, opacity 0.4s ease;
+  z-index: 5000;
   background: #fff;
-
 }
+
+
 
 .top-infobar {
   background: #fff;
   color: #000;
   padding: 4px 0;
-  position: sticky;
   top: 0;
   z-index: 1100;
   transition: all 0.4s ease-in-out;
@@ -93,7 +99,6 @@
   border: none !important;
   margin: 0 !important;
   box-shadow: none !important;
-  position: sticky;
   top: 0;
   z-index: 1200;
   transition: top 0.4s ease-in-out;
