--- a/src/components/home/HomeAbout.css
+++ b/src/components/home/HomeAbout.css
@@ -11,7 +11,7 @@
 
 .home-about-container {
   width: 100%;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   display: flex;
   align-items: center;
   justify-content: space-between;
